[gd_scene load_steps=16 format=3 uid="uid://16rl1x65ikpd"]

[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="1_4wq2m"]
[ext_resource type="Script" path="res://scripts/game/input_control/camera_controller.gd" id="2_opefa"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_2d.gd" id="2_t7qba"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/resources/tween_resource.gd" id="3_lighq"]
[ext_resource type="Script" path="res://scripts/game/systems/building_system/world.gd" id="5_6icwk"]
[ext_resource type="Texture2D" uid="uid://bkcs8p2g8svju" path="res://assets/texture/background/f_od.png" id="6_cgep4"]
[ext_resource type="Texture2D" uid="uid://boht884fjrnum" path="res://assets/texture/common/white_block.png" id="6_e4mlb"]
[ext_resource type="Texture2D" uid="uid://wtul05x17m10" path="res://assets/texture/background/dd.png" id="6_ot06h"]
[ext_resource type="Script" path="res://scripts/game/systems/building_system/building_manager.gd" id="8_idxec"]
[ext_resource type="Script" path="res://scripts/game/systems/building_system/building_slot.gd" id="9_kc4qa"]
[ext_resource type="Script" path="res://scripts/game/systems/building_system/click_build_menu.gd" id="10_hlsdr"]
[ext_resource type="Script" path="res://scripts/game/systems/building_system/build_menu.gd" id="12_5cvrb"]
[ext_resource type="Script" path="res://scripts/game/systems/building_system/building_item.gd" id="12_bbqcn"]

[sub_resource type="Resource" id="Resource_vy6rr"]
script = ExtResource("3_lighq")
duration = 1.0
transition = 0
ease = 2

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_gv60b"]

[node name="Game" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]
limit_smoothed = true

[node name="PhantomCameraHost" type="Node" parent="Camera2D"]
script = ExtResource("1_4wq2m")

[node name="PhantomCamera2D" type="Node2D" parent="." node_paths=PackedStringArray("follow_target")]
script = ExtResource("2_t7qba")
follow_mode = 2
follow_target = NodePath("../CameraController")
tween_resource = SubResource("Resource_vy6rr")

[node name="CameraController" type="Node2D" parent="."]
script = ExtResource("2_opefa")
camera_move_speed = 1000.0

[node name="World" type="Node2D" parent="."]
script = ExtResource("5_6icwk")

[node name="Background" type="StaticBody2D" parent="World"]

[node name="GroundCollision" type="CollisionShape2D" parent="World/Background"]
position = Vector2(0, 355)
shape = SubResource("WorldBoundaryShape2D_gv60b")

[node name="ParallaxBackground" type="ParallaxBackground" parent="World/Background"]

[node name="BackgroundFarLayer" type="ParallaxLayer" parent="World/Background/ParallaxBackground"]
self_modulate = Color(1, 1, 1, 0.513726)
motion_scale = Vector2(0.8, 0)
motion_mirroring = Vector2(1920, 0)

[node name="Sprite2D" type="Sprite2D" parent="World/Background/ParallaxBackground/BackgroundFarLayer"]
texture = ExtResource("6_ot06h")
centered = false

[node name="GroundLayer" type="ParallaxLayer" parent="World/Background/ParallaxBackground"]
z_index = -3
motion_scale = Vector2(1, 0)
motion_offset = Vector2(0.5, 0)
motion_mirroring = Vector2(1920, 0)

[node name="Sprite2D" type="Sprite2D" parent="World/Background/ParallaxBackground/GroundLayer"]
texture = ExtResource("6_cgep4")
centered = false

[node name="BuildingManager" type="Node2D" parent="World" node_paths=PackedStringArray("slot", "slots", "build_menu")]
script = ExtResource("8_idxec")
slot = NodePath("BuildingSlots/Slot")
slots = NodePath("BuildingSlots")
slot_size = 300.0
build_menu = NodePath("BuildMenu")

[node name="BuildingSlots" type="Node2D" parent="World/BuildingManager"]
position = Vector2(0, 355)

[node name="Slot" type="Node2D" parent="World/BuildingManager/BuildingSlots"]
script = ExtResource("9_kc4qa")

[node name="Control" type="Control" parent="World/BuildingManager/BuildingSlots/Slot"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("10_hlsdr")

[node name="TextureRect" type="TextureRect" parent="World/BuildingManager/BuildingSlots/Slot/Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("6_e4mlb")

[node name="BuildMenu" type="Control" parent="World/BuildingManager"]
visible = false
custom_minimum_size = Vector2(1000, 200)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("12_5cvrb")

[node name="Background" type="TextureRect" parent="World/BuildingManager/BuildMenu"]
self_modulate = Color(1, 1, 1, 0.505882)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_e4mlb")

[node name="MarginContainer" type="MarginContainer" parent="World/BuildingManager/BuildMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="World/BuildingManager/BuildMenu/MarginContainer"]
layout_mode = 2

[node name="au" type="Control" parent="World/BuildingManager/BuildMenu/MarginContainer/HBoxContainer" node_paths=PackedStringArray("menu")]
custom_minimum_size = Vector2(160, 160)
layout_mode = 2
script = ExtResource("12_bbqcn")
building_id = &"au"
menu = NodePath("../../..")

[node name="TextureRect" type="TextureRect" parent="World/BuildingManager/BuildMenu/MarginContainer/HBoxContainer/au"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_e4mlb")

[node name="i" type="Control" parent="World/BuildingManager/BuildMenu/MarginContainer/HBoxContainer" node_paths=PackedStringArray("menu")]
custom_minimum_size = Vector2(160, 160)
layout_mode = 2
script = ExtResource("12_bbqcn")
building_id = &"i"
menu = NodePath("../../..")

[node name="TextureRect" type="TextureRect" parent="World/BuildingManager/BuildMenu/MarginContainer/HBoxContainer/i"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_e4mlb")

[node name="c" type="Control" parent="World/BuildingManager/BuildMenu/MarginContainer/HBoxContainer" node_paths=PackedStringArray("menu")]
custom_minimum_size = Vector2(160, 160)
layout_mode = 2
script = ExtResource("12_bbqcn")
building_id = &"c"
menu = NodePath("../../..")

[node name="TextureRect" type="TextureRect" parent="World/BuildingManager/BuildMenu/MarginContainer/HBoxContainer/c"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_e4mlb")

[node name="fg" type="Control" parent="World/BuildingManager/BuildMenu/MarginContainer/HBoxContainer" node_paths=PackedStringArray("menu")]
custom_minimum_size = Vector2(160, 160)
layout_mode = 2
script = ExtResource("12_bbqcn")
building_id = &"fg"
menu = NodePath("../../..")

[node name="TextureRect" type="TextureRect" parent="World/BuildingManager/BuildMenu/MarginContainer/HBoxContainer/fg"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_e4mlb")

[node name="tg" type="Control" parent="World/BuildingManager/BuildMenu/MarginContainer/HBoxContainer" node_paths=PackedStringArray("menu")]
custom_minimum_size = Vector2(160, 160)
layout_mode = 2
script = ExtResource("12_bbqcn")
building_id = &"tg"
menu = NodePath("../../..")

[node name="TextureRect" type="TextureRect" parent="World/BuildingManager/BuildMenu/MarginContainer/HBoxContainer/tg"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_e4mlb")

[node name="h" type="Control" parent="World/BuildingManager/BuildMenu/MarginContainer/HBoxContainer" node_paths=PackedStringArray("menu")]
custom_minimum_size = Vector2(160, 160)
layout_mode = 2
script = ExtResource("12_bbqcn")
building_id = &"h"
menu = NodePath("../../..")

[node name="TextureRect" type="TextureRect" parent="World/BuildingManager/BuildMenu/MarginContainer/HBoxContainer/h"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_e4mlb")

[node name="Environment" type="Node2D" parent="."]

[node name="Sun" type="DirectionalLight2D" parent="Environment"]

[node name="Weather" type="Node2D" parent="Environment"]

[connection signal="gui_input" from="World/BuildingManager/BuildingSlots/Slot/Control" to="World/BuildingManager/BuildingSlots/Slot/Control" method="_unhandled_input"]
[connection signal="mouse_entered" from="World/BuildingManager/BuildingSlots/Slot/Control" to="World/BuildingManager/BuildingSlots/Slot/Control" method="on_pointer_enter"]
[connection signal="mouse_exited" from="World/BuildingManager/BuildingSlots/Slot/Control" to="World/BuildingManager/BuildingSlots/Slot/Control" method="on_pointer_exit"]
[connection signal="gui_input" from="World/BuildingManager/BuildMenu/MarginContainer/HBoxContainer/au" to="World/BuildingManager/BuildMenu/MarginContainer/HBoxContainer/au" method="click_to_build"]
[connection signal="gui_input" from="World/BuildingManager/BuildMenu/MarginContainer/HBoxContainer/i" to="World/BuildingManager/BuildMenu/MarginContainer/HBoxContainer/i" method="click_to_build"]
[connection signal="gui_input" from="World/BuildingManager/BuildMenu/MarginContainer/HBoxContainer/c" to="World/BuildingManager/BuildMenu/MarginContainer/HBoxContainer/c" method="click_to_build"]
[connection signal="gui_input" from="World/BuildingManager/BuildMenu/MarginContainer/HBoxContainer/fg" to="World/BuildingManager/BuildMenu/MarginContainer/HBoxContainer/fg" method="click_to_build"]
[connection signal="gui_input" from="World/BuildingManager/BuildMenu/MarginContainer/HBoxContainer/tg" to="World/BuildingManager/BuildMenu/MarginContainer/HBoxContainer/tg" method="click_to_build"]
[connection signal="gui_input" from="World/BuildingManager/BuildMenu/MarginContainer/HBoxContainer/h" to="World/BuildingManager/BuildMenu/MarginContainer/HBoxContainer/h" method="click_to_build"]
